--- a/cbv_team4/src/create-project.css
+++ b/cbv_team4/src/create-project.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin: 0;
     background-image: url(/src/images/CreateNewProject.jpeg);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 
@@ -10,7 +10,7 @@ body{
     background-size: cover;
     background-attachment: fixed;  
 
-}
+} */
 
 /*Start of input boxes */
 .project-name-input{
@@ -25,10 +25,7 @@ body{
     position: absolute;
 }
 
-input[type=text]{
-    /* width:60%;*/
-    /* align-self: center;  */
-    /* padding: 12px; */
+/* input[type=text]{
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 45%;
@@ -36,14 +33,13 @@ input[type=text]{
     margin: 8px 350px;
     
     
-}
+} */
 
 /*End of input boxes */
 
 /* Start of buttons */
-
 /* button{
-    background-color: #FFFF;
+    background-color: #FFFF; 
     border: none;
     color: black;
     padding: 10px 20px;
@@ -78,7 +74,7 @@ input[type=text]{
 }
 /* End of buttons */
 
-label{
+/* label{
     color: white;
     font-family: Andale Mono, sans-serif;
     font-weight: 900;
@@ -86,9 +82,13 @@ label{
     padding: 12px 12px 12px 0;
     display: inline-block;
     margin: 0 350px;
-}
+} */
 
 .name-div{
     margin: 20px 0px;
     height:10px;
 }
+
+
+
+
