--- a/cbv_team4/src/Home.css
+++ b/cbv_team4/src/Home.css
@@ -6,7 +6,7 @@ body, html {
 
 /* Primary div for component */
 .home{
-    background: url(/src/images/HomeScreen.jpg);
+    background: url(./images/HomeScreen.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;  
