--- a/cbv_team4/src/create-project.css
+++ b/cbv_team4/src/create-project.css
@@ -12,95 +12,96 @@ body, html {
     background-attachment: fixed;  
     height: 100vh;
     width: auto;
+    box-sizing: border-box;
 }
 
 /* Style inputs, select elements and textareas */
-input[type=text], select, textarea{
+/* input[type=text], select, textarea{
     width: 98%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    resize: vertical;
-}
+} */
   
 /* Style the submit button */
 .create-project-button{
     background-color: skyblue;
     color: white;
-    padding: 12px 20px;
-    border: 1px solid black;
+    padding: 10px 0px;
+    border: 2px solid black;
     border-radius: 4px;
     border-color: black;
     cursor: pointer;
     float: right;
-
+    width: 20%;
 }
 
 /* Style the submit button */
 .cancel-project-button{
     background-color: skyblue;
     color: white;
-    padding: 12px 20px;
-    border: 1px solid black;
+    padding: 10px 0px;
+    border: 2px solid black;
     border-radius: 4px;
     border-color: black;
     cursor: pointer;
     float: left;
+    width: 20%;
 
 }
 
-.fields{
+/* .fields{
     width: 375px;
     height: 50px;
     font-size: medium;
-    /* width: 100%; */
+    width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
     resize: vertical;
-}
+} */
     
 /* Floating column for labels: 25% width */
-.col-25 {
+/* .col-25 {
     float: left;
     width: 25%;
     margin-top: 6px;
-}
+} */
   
 /* Floating column for inputs: 75% width */
-.col-75 {
+/* .col-75 {
     float: left;
     width: 75%;
     margin-top: 6px;
-}
+} */
   
 /* Clear floats after the columns */
-.row:after {
+/* .row:after {
     content: "";
     display: table;
     clear: both;
-}
+} */
   
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
     .col-25, .col-75, .fields {
         width: 100%;
         margin-top: 0;
     }
-}
+} */
 
 /* Div the creates the form w */
-.create-form{
+/* .create-project-form{
     width: 100%;
-    /* height: 450px; */
+    height: 450px;
     margin: 10px 20px;
     position: relative;
-}
+} */
 
 /* Style the container */
-.container {
+.create-project-container {
     margin: 0;
     position: absolute;
     top: 50%;
@@ -111,23 +112,21 @@ input[type=text], select, textarea{
     border: 2px solid black;
     border-radius: 10px;
     border-color: black;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     justify-self: center;
     padding: 10px 10px;
     width: 50%;
-
-
-
 }
+
 
 /* Style the label to display next to the inputs */
 .create-titles{
     font-family: 'Chakra Petch', sans-serif;
+    font-size: small;
+    /* color: red; */
     font-weight: bolder;
-    padding: 12px 12px 12px 12px;
-    display: inline-block;
-    font-weight: bolder;
+
 
 }
 
@@ -135,5 +134,9 @@ input[type=text], select, textarea{
     font-family: 'Chakra Petch', sans-serif;
     color: red;
     font-weight: bolder;
+}
 
+
+.form-group{
+    margin: 3px 10px;
 }
