--- a/cbv_team4/src/components/Displayer/Visualizer.css
+++ b/cbv_team4/src/components/Displayer/Visualizer.css
@@ -12,43 +12,50 @@
     background-color: white;
     width: 100vw;
     height: 5%;
-    border: 2px black solid;
+    border: 4px black solid;
     justify-content: space-between;
     margin: 0 auto;
     display: flex;
 }
 
 .trafficButton{
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-left: 50px;
-    width: 80px;
+    /* margin-top: 1px; */
+    /* margin-bottom: 8px; */
+    margin-left: 15px;
+    font-size:small;
+    /* height:5%; */
+    /* width: 80px; */
 }
 
 .mapButton{
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-left: 25px;
-    width: 80px;
+    /* margin-top: 8px; */
+    /* margin-top: 1px; */
+    /* margin-bottom: 8px; */
+    margin-left: 15px;
+    font-size:small;
+    /* width: 80px; */
 }
 
 .closeButton{
     margin-top: 2px;
-    margin-bottom: 0px;
+    margin-bottom: 30px;
+    height: 30px;
+    /* margin-bottom: 0px; */
+    margin-right: 4px;
     /* float: right; */
 }
 
 
 
 .displayerName{
-    margin-right: 7%;
-    margin-top: 2px;
+    margin-right: 8%;
+    margin-top: 3px;
 
 }
 
 .hihi{
     left: auto;
-
+    margin-top: 3px;
 }
 
 
@@ -130,7 +137,7 @@
     width: 50vw;
     height: 680px;
     left: 50%;
-    bottom: 10px;
+    /* bottom: 10px; */
     position: absolute;
     /* overflow: auto; */
 }
