Completed CAN-Map with values

--- a/cbv_team4/src/components/Displayer/Popups/savePopup.css
+++ b/cbv_team4/src/components/Displayer/Popups/savePopup.css
@@ -11,9 +11,9 @@
     /* margin-left: 100px; */
 }
 
-.popup-container{
+/* .popup-container{
     margin-left: 120px;
-}
+} */
 
 .popup-update-button{
     background-color: skyblue;
