--- a/cbv_team4/src/components/Displayer/Visualizer/Visualizer.css
+++ b/cbv_team4/src/components/Displayer/Visualizer/Visualizer.css
@@ -142,7 +142,10 @@
 
 .nodeContainer{
     border: "1px solid black";
-    background-color: "white";
+    background-color: red;
+    /* background-image: url('Icons/Engine.png'); */
+    object-fit: cover;
+    /* background:  url('Icons/Engine.png'); */
     border-radius: 4;
     padding: 5;
     position: "relative";
@@ -152,3 +155,39 @@
     padding: 10px;
 }
 
+
+.tooltip{
+    position: relative;
+    height: 60;
+    width: 250px;
+    background: lightgray;
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    font-size: 18px;
+    margin: 0 auto;
+}
+
+.tooltip::after{
+    position: absolute;
+    z-index: 2;
+    display: none;
+    width: 200px;
+    padding: 10px;
+    font-size: 0.8em;
+    line-height: 1.4em;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    content: attr(title);
+}
+
+.tooltip:hover::before{
+    display: inline-block;
+}
+
+.node-icon{
+    position: relative;
+    width: 70%;
+    height: 70px;
+}
