BRANCH MERGED - Fixed Visualizer.js Map.TODO: Fix visual bugs

--- a/cbv_team4/src/components/Displayer/Visualizer/Visualizer.css
+++ b/cbv_team4/src/components/Displayer/Visualizer/Visualizer.css
@@ -115,8 +115,9 @@
 
 .can-map{
     width: 50vw;
-    height: 100vw;
+    height: 88vw;
     left: 50%;
+    top: 94px;
     position: absolute;
     /* bottom: 10px; */
 }
