--- a/cbv_team4/src/components/Sync/Sync.css
+++ b/cbv_team4/src/components/Sync/Sync.css
@@ -33,8 +33,8 @@ body, html {
     border: 2px solid black;
     border-radius: 4px;
     border-color: black;
-    position: absolute;
-    top: 47%;
+    position: fixed;
+    top: 55%;
     left: 43%;
 }
 
@@ -45,12 +45,10 @@ body, html {
     border: 2px solid black;
     border-radius: 4px;
     border-color: black;
-    position: absolute;
-    top:100%;
-    left: 52%;
+    position: fixed;
+    top:87%;
+    left: 47%;
 }
-
-
 
 .Sync{
 	display: flex;
@@ -96,8 +94,8 @@ body, html {
 
 .sync-project-container {
     margin: 0;
-    position: absolute;
-    top: 30%;
+    position: fixed;
+    top: 35%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -110,7 +108,7 @@ body, html {
     justify-self: center;
     padding: 10px 10px;
     width: 35%;
-    height: 35%;
+    height: 55%;
 }
 
 .ip{
